--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    password: Hasl0123
+    password: Tajfun
     url: jdbc:postgresql://localhost:5432/app
     username: postgres
   jpa:
