--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     username: sa
     password: sa
     driver-class-name: org.h2.Driver
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   jpa:
     hibernate:
       ddl-auto: create-drop
