--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,15 @@
 			<version>4.0.7</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
+			<version>6.5.3.RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>com.github.jreddit</groupId>
 			<artifactId>jreddit</artifactId>
 			<version>1.0.3</version>
@@ -167,6 +176,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
 			</plugin>
 		</plugins>
 		<finalName>spring-boot-docker</finalName>
