--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/dragon
     password: Hasl0123
     user: postgres
+  spring:
+    redis:
+      host: localhost
+      port: 6379
