--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -24,6 +24,12 @@ spring:
   redis:
     host: ${SPRING_REDIS_HOST:redis}
     port: ${SPRING_REDIS_PORT:6379}
+  rabbitmq:
+    host: rabbit
+    port: 5672
+    username: ${SPRING_RABBITMQ_USERNAME:${RABBIT_USER:admin}}
+    password: ${SPRING_RABBITMQ_PASSWORD:${RABBIT_PASS:admin}}
+    virtual-host: /
 
 reddit:
   client:
